Fix spacing issue

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -16,14 +16,14 @@ body {
   align-items: center;
   height: 100vh;
   width: 100vw;
-  padding: 1.25rem;
+  padding: 1rem;
   flex-direction: column;
   box-sizing: border-box;
 }
 
 .components {
   height: 95%;
-  width: 80%;
+  width: 95%;
   display: flex;
   flex-direction: row;
 }
